# aitrics_assignment

./: .dockerignore  .env.example  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  assignment_description.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 1e6b7927b28f_add_timezone_to_access_token_expires_at.py  5843dbdd935f_initial_tables.py  640d2162a405_drop_doctors_table.py
claude_works/: DIALOG.md  PHASE_0_DIALOG.md  claude_py.md  spec.md
claude_works/vital_monitor/: DIALOG.md  GLOBAL.md  PHASE_0.5_ENV_SETUP.md  PHASE_1_DATABASE.md  PHASE_2.5_BEARER_AUTH.md  PHASE_2_AUTH.md  PHASE_3.5_OPENAPI_DOCS.md  PHASE_3A_PATIENT_API.md  PHASE_3B_VITAL_API.md  PHASE_3C_INFERENCE_API.md  PHASE_4_CONTAINERIZE.md  PHASE_5_CI.md
src/app/: config.py  dependencies.py  main.py
src/app/application/: __init__.py  inference_service.py  patient_service.py  vital_service.py
src/app/domain/: doctor.py  exceptions.py  patient.py  risk_level.py  vital.py  vital_type.py
src/app/domain/inference/: __init__.py  base.py  factory.py  rule_based_inference.py
src/app/infrastructure/: database.py
src/app/presentation/: inference_router.py  patient_router.py  vital_router.py
tests/: conftest.py
tests/e2e/: conftest.py  test_inference_api.py  test_patient_api.py  test_vital_api.py
tests/unit/: test_bearer_auth.py  test_inference_factory.py  test_inference_service.py  test_migrations.py  test_models.py  test_repositories.py  test_rule_based_inference.py  test_vital_service.py
(+16 files in other folders)
